--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#f4f7f6">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#f4f7f6">
     <title>Macro Calculator</title>
     <link rel="manifest" href="manifest.json">
     <style>
@@ -92,4 +94,5 @@
     });
 </script>
 </body>
+
 </html>
